--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsdom": "^26.1.0",
-    "node-fetch": "^3.3.2",
-    
+    "node-fetch": "^3.3.2"
   }
 }
