--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "./render-build.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
